--- a/index.html
+++ b/index.html
@@ -38,36 +38,45 @@
         <div class="video-container">
             <div class="video-item">
                 <iframe width="400" height="280" src="https://www.youtube.com/embed/2vIXZfbqqoU" frameborder="0" allowfullscreen></iframe>
+                <p class="titulo">#01 - Classic Rock Internacional</p>
             </div>
             <div class="video-item">
                 <iframe width="400" height="280" src="https://www.youtube.com/embed/XPykkoNq4vg" frameborder="0" allowfullscreen></iframe>
+                <p class="titulo">#02 - Tecno 2000</p>
             </div>
             <div class="video-item">
                 <iframe width="400" height="280" src="https://www.youtube.com/embed/d39Hc7Y0BFw" frameborder="0" allowfullscreen></iframe>
+                <p class="titulo">#03 - Rock Nacional</p>
             </div>
         </div>
 
         <div class="video-container">
             <div class="video-item">
                 <iframe width="400" height="280" src="https://www.youtube.com/embed/q14W19V8hhE" frameborder="0" allowfullscreen></iframe>
+                <p class="titulo">#04 - Filmes</p>
             </div>
             <div class="video-item">
                 <iframe width="400" height="280" src="https://www.youtube.com/embed/Me4JauETFXI" frameborder="0" allowfullscreen></iframe>
+                <p class="titulo">#05 - Pop</p>
             </div>
             <div class="video-item">
                 <iframe width="400" height="280" src="https://www.youtube.com/embed/HwR5GyzdTws" frameborder="0" allowfullscreen></iframe>
+                <p class="titulo">#06 - Rock and Classic</p>
             </div>
         </div>
 
         <div class="video-container">
             <div class="video-item">
                 <iframe width="400" height="280" src="https://www.youtube.com/embed/VAw2LPNzt1U" frameborder="0" allowfullscreen></iframe>
+                <p class="titulo">#07 - As Mais Pedidas</p>
             </div>
             <div class="video-item">
                 <iframe width="400" height="280" src="https://www.youtube.com/embed/5xAdiQrq-mU" frameborder="0" allowfullscreen></iframe>
+                <p class="titulo">#08 - Trash 80' 90'</p>
             </div>
             <div class="video-item">
                     <iframe width="400" height="280" src="https://www.youtube.com/embed/FK0_vrpvkow" frameborder="0" allowfullscreen></iframe>
+                    <p class="titulo">#09 - Carnaval</p>
                 </div>
             </div>
             
