--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     <p class="titulo">#09 - Carnaval</p>
                 </div>
             </div>
-            
+    </main>    
     <footer>
         <img src="./img/clipart434380.png" class="logo2">
         <p>&copy - Criado por Marcelo Siqueira Oliveira - 2023</p>
